# datavalues

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
data/: __init__.py  data.py  units.py
datavalues.egg-info/: PKG-INFO  SOURCES.txt
src/datavalues/: __init__.py  __version__.py  registry.py
src/datavalues/base/: core.py  unit.py
src/datavalues/binary/: __init__.py  bits.py  bytes.py
src/datavalues/metric/: __init__.py  bits.py  bytes.py
tests/: requirements.txt  test_arithmetic.py  test_comparisons.py  test_conversions.py  test_parsing.py
