[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datavalues"
authors = [
    { name="Ben Nassif", email="bennassif@gmail.com" }
]

dynamic = ["version"]

description = "Python helpers for converting data units between metric and binary prefixes."
readme = "README.md"

requires-python = ">=3.10"
keywords = ["conversion", "data", "units", "byte", "bit"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

license = "MIT"
license-files = [
    "LICEN[CS]E"
]

[tool.setuptools.dynamic]
version = { attr = "datavalues.__version__.__version__" }

[project.urls]
Homepage = "https://github.com/bnassif/datavalues"
Repository = "https://github.com/bnassif/datavalues"
Issues = "https://github.com/bnassif/datavalues/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
